# web_console

./: .gitignore  LICENSE  MODULE.bazel  README.md  TODO.md  go.mod
api/proto/: BUILD  commandline_task.proto
cmd/client/: BUILD  client.go
cmd/server/: BUILD  server.go
internal/: go.mod
internal/db/: db_operations.go  db_operations_test.go  db_tasks.go  go.mod
internal/pb/: go.mod  go.sum  utils.go
internal/runner/: go.mod  go.sum  runner.go  runner_daemon.go  task_listener.go
internal/service/: go.mod  go.sum  task_service.go  task_service_listener.go
